// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > uiV6Landing OFF > snapshot: flag off, path /dashboard/team 1`] = `
<nav
  aria-label="Breadcrumb"
  class="text-outline mb-4 flex items-center gap-2 text-xs font-medium"
>
  <span
    class="flex items-center gap-2"
  >
    <a
      class="hover:text-primary capitalize"
      href="/dashboard"
    >
      dashboard
    </a>
  </span>
  <span
    class="flex items-center gap-2"
  >
    <span
      class="material-symbols-outlined text-sm"
    >
      chevron_right
    </span>
    <span
      class="text-on-surface capitalize"
    >
      team
    </span>
  </span>
</nav>
`;

exports[`Breadcrumbs > uiV6Landing ON > snapshot: flag on, path /line-manager/timeline 1`] = `
<nav
  aria-label="Breadcrumb"
  class="text-outline mb-4 flex items-center gap-2 text-xs font-medium"
>
  <a
    class="hover:text-primary capitalize"
    href="/pm"
  >
    Home
  </a>
  <span
    class="material-symbols-outlined text-sm"
  >
    chevron_right
  </span>
  <span
    class="flex items-center gap-2"
  >
    <a
      class="hover:text-primary capitalize"
      href="/line-manager"
    >
      line manager
    </a>
  </span>
  <span
    class="flex items-center gap-2"
  >
    <span
      class="material-symbols-outlined text-sm"
    >
      chevron_right
    </span>
    <span
      class="text-on-surface capitalize"
    >
      timeline
    </span>
  </span>
</nav>
`;

exports[`Breadcrumbs > uiV6Landing ON > snapshot: flag on, path /pm/wishes 1`] = `
<nav
  aria-label="Breadcrumb"
  class="text-outline mb-4 flex items-center gap-2 text-xs font-medium"
>
  <a
    class="hover:text-primary capitalize"
    href="/pm"
  >
    Home
  </a>
  <span
    class="material-symbols-outlined text-sm"
  >
    chevron_right
  </span>
  <span
    class="flex items-center gap-2"
  >
    <a
      class="hover:text-primary capitalize"
      href="/pm"
    >
      pm
    </a>
  </span>
  <span
    class="flex items-center gap-2"
  >
    <span
      class="material-symbols-outlined text-sm"
    >
      chevron_right
    </span>
    <span
      class="text-on-surface capitalize"
    >
      wishes
    </span>
  </span>
</nav>
`;
